updated contact class name

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         
         <section class="contact">
             <div class="container">
-                <h1 class="img">Contact</h1>
+                <h1 class="title">Contact</h1>
                 <div class="content">
                     <form action="">
                         <input type="email" name="email" placeholder="Youremail@email.com">
