--- a/resume.html
+++ b/resume.html
@@ -23,10 +23,10 @@
       <h1 class="title bold">Technical Skills & Project</h1>
       <section class="container">
         <div class="bold description">Programming:
-          <span>HTML, CSS, JavaScript, PHP, SQL, Python, Dr.Racket </span>
+          <span>HTML, CSS, JavaScript, PHP, SQL, Python, Dr.Racket, Java </span>
         </div>
         <div class="bold description">Frameworks/Libraries/Tools:
-          <span>Tableau, Bootstrap, Alpha Vantage API, Highcharts, Git</span>
+          <span>React, Tableau, Bootstrap, Alpha Vantage API, Highcharts, Git</span>
         </div>
       </section>
       
