--- a/resume.html
+++ b/resume.html
@@ -12,9 +12,8 @@
       <h1>Mochy Nguyen</h1>
     
       <ul class="hor-box">
-        <li>Vancouver, V5P 1R2</li>
+        <li>Vancouver</li>
         <li>mochynguyen99@gmail.com</li>
-        <li>778 697 5681</li>
         <li href="index.html">mochy.me</li>
       </ul>
     </header>
@@ -34,7 +33,7 @@
         <h2 class="project">TradeX Project</h2>
         <div class="description">The application enables users to engage in real-time trading of stocks and cryptocurrencies, leveraging current market data.</div>
         <div class="bold description">Techniques: 
-          <span>HTML, CSS, JavaScript, PHP, SQL, phpmyadmin, Alphåa Vantage API, Highcharts</span>
+          <span>HTML, CSS, JavaScript, PHP, SQL, phpmyadmin, JQuery, Alpha Vantage API, Highcharts</span>
         </div>
         <div class="bold description">Highlight features:
           <span>Data-driven and dynamic application, deposit and withdrawal system, secure login system, real-time stock trading, portfolio management, stock price visualization, responsive design, raw code implementation </span>
